<resources>
    <string name="app_name">TinchoApp2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">ENTRAR O REGISTRARSE</string>
    <string name="action_sign_in_short">ENTRAR</string>
    <string name="welcome">"BIENVENID@!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inicia_sesion">INICIA SESION</string>
    <string name="logo_el_tincho">Logo El Tincho</string>
    <string name="bandera_de_argentina">bandera de argentina</string>
    <string name="nombre">NOMBRE</string>
    <string name="NOMBRE">NOMBRE</string>
    <string name="email">EMAIL</string>
    <string name="telefono">TELEFONO</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="password">PASSWORD</string>
    <string name="phone">phone</string>
    <string name="recuperar_password">RECUPERAR PASSWORD</string>
    <string name="restaurar">RESTAURAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entradas">Entradas</string>
    <string name="cortes_argentinos">Cortes Argentinos</string>
    <string name="cositas_del_tincho">Cositas del Tincho</string>
    <string name="viernes_de_pizza">Viernes de pizza</string>
    <string name="especialidades">Especialidades</string>
    <string name="bebidas">Bebidas</string>
    <string name="menu">Menu</string>
    <string name="perfil">Perfil</string>
    <string name="contacto">Contacto</string>
    <string name="mi_orden">Mi orden</string>
    <string name="precio">Precio</string>
</resources>