<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarycolor"
    tools:context=".view.ui.activities.RecuperarActivity">


    <Button
        android:id="@+id/btnRestaurar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/secondarycolor"
        android:enabled="true"
        android:fontFamily="@font/right_chalk"
        android:text="@string/restaurar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/stylo_borde_editext"
        android:fontFamily="@font/right_chalk"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textColorHint="#039BE5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/stylo_borde_editext"
        android:fontFamily="@font/right_chalk"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textColorHint="#039BE5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="176dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo_el_tincho"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tincho_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/right_chalk"
        android:text="@string/recuperar_password"
        android:textColor="#039BE5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/bandera_de_argentina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/bandera_arg"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>