<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarycolor"
    tools:context=".view.ui.activities.RegistroActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="176dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo_el_tincho"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tincho_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/nombre"
        android:fontFamily="@font/right_chalk"
        android:gravity="center"
        android:text="@string/NOMBRE"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/stylo_borde_editext"
        android:ems="10"
        android:fontFamily="@font/right_chalk"
        android:inputType="textPersonName"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/NOMBRE" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/right_chalk"
        android:gravity="center"
        android:text="@string/telefono"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/stylo_borde_editext"
        android:ems="10"
        android:fontFamily="@font/right_chalk"
        android:inputType="phone"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:text="@string/telefono" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/right_chalk"
        android:gravity="center"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/stylo_borde_editext"
        android:ems="10"
        android:fontFamily="@font/right_chalk"
        android:inputType="textVisiblePassword|textPassword"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:text="PASSWORD" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/right_chalk"
        android:gravity="center"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/stylo_borde_editext"
        android:ems="10"
        android:fontFamily="@font/right_chalk"
        android:inputType="textEmailAddress"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:text="@string/email" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/secondarycolor"
        android:fontFamily="@font/right_chalk"
        android:text="@string/registrarse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>


