<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primarycolor"
    tools:context=".MenuFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Falta Poner Logo Del Tincho en el Relative Layout atributo android:background-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/tincho_logo">
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondarylightcolor">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu1entradas2">
                            
                        </ImageView>
                            <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/entradas"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu2carnes2">
                        </ImageView>
                        <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/cortes_argentinos"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu3cositas">
                        </ImageView>
                        <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/cositas_del_tincho"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu4especialidades2">
                        </ImageView>
                        <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/especialidades"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu5pizza">

                        </ImageView>
                        <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/viernes_de_pizza"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_columnWidth="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:background="@color/primarytextcolor">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/menu6bebidas">
                        </ImageView>
                        <!--En ImageView poner android:src="@drawable"-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/primarytextcolor"
                            android:fontFamily="@font/chillerz_demo"
                            android:text="@string/bebidas"
                            android:textAlignment="center"
                            android:textColor="#039BE5"
                            android:textSize="24sp"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>



                </GridLayout>
            </ScrollView>
    </LinearLayout>
</LinearLayout>